# requick

./: .gitignore  LICENSE  cli.py  pyproject.toml
httpgen/: utils.py
httpgen/django_plugin/: django_loader.py
src/httpgen/: utils.py
src/requick/: cli.py
